welcome.lessons.welcome.array.array667.Array667.scala.error
array667:7: error: value count67 is not a member of Int
    else if (nums(i)==6 && nums(i+1)==7){count67 count67+1}
                                                 ^array667:9: error: type mismatch;
 found   : (Int, Int)
 required: Int
  return (count66 , count67)
         ^